wip fix layout issues

--- a/src/assets/scss/basics/_general.scss
+++ b/src/assets/scss/basics/_general.scss
@@ -15,3 +15,7 @@ ul {
     margin: 0;
     padding: 0;
 }
+
+#root {
+    width: 100%;
+}
